cmake_minimum_required(VERSION 3.14)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode main.cpp include/sqrt.h include/trie.h include/word_search_ii.h include/count_bits.h include/n_queens_ii.h include/climbing_stairs.h include/triangle.h include/product_sub.h include/sub_seq.h include/edit_distance.h include/nums_islands.h include/kth_stream.h include/quick_sort.h include/kth_array.h include/lru-cach.h)