cmake_minimum_required(VERSION 3.14)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode main.cpp include/sqrt.h include/trie.h include/word_search_ii.h include/count_bits.h include/n_queens_ii.h include/climbing_stairs.h include/triangle.h include/product_sub.h include/sub_seq.h include/edit_distance.h include/nums_islands.h include/kth_stream.h include/quick_sort.h include/kth_array.h include/lru-cach.h include/dijkstra.h include/surrounded_regions.h include/k_inverse_pairs_array.h include/44wildcard_matching.h include/coin_change.h include/15_3sum.h include/169_majority_element.h include/41_missing_positive.h include/23_merge_k_list.h include/20_valid_parentheses.h include/32_longest_valid_parentheses.h include/150_evaluate_reversepolish.h include/239_sliding_window.h include/69_sqrt.h include/344_reverse_string.h include/151_reverse_words_in_string.h include/8_atoi.h)